--- a/css/media.css
+++ b/css/media.css
@@ -26,8 +26,10 @@
     }
     .container input {
         width: 300px; 
-    
-}
+    }
+    .container input::placeholder {
+        font-size: 20px;
+    }
     .title {
         font-size: 40px;
         text-shadow: 7px 21px 11px brown;            }   
